# rewardfuzz

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/: BUILD_PROTOCOL.md
.github/workflows/: ci.yml
docs/: architecture.d2
examples/: quickstart.py
src/rewardfuzz/: __init__.py  audit.py  bench.py  cli.py  types.py
src/rewardfuzz/adapters/: __init__.py  base.py  callable_.py  openevolve.py  rlvr.py
src/rewardfuzz/corpus/: __init__.py  manifest.jsonl  spec.py
src/rewardfuzz/corpus/targets/: __init__.py  code.py  numeric.py  rlvr.py
src/rewardfuzz/judge/: __init__.py  llm_ensemble.py  meta_guard.py  structural.py
src/rewardfuzz/report/: __init__.py  hardening.py  render.py  schema.py
src/rewardfuzz/scoring/: __init__.py  bootstrap.py  metrics.py  robustness.py
src/rewardfuzz/strategies/: __init__.py  base.py  degenerate.py  llm_specgaming.py  numeric_exploit.py  side_effect.py  test_tamper.py
src/rewardfuzz/synth/: __init__.py  exec_program.py  hf_client.py  prompts.py  sandbox.py
tests/: test_adapters.py  test_audit.py  test_bench.py  test_exec_program.py  test_judge.py  test_llm_optional.py  test_report_cli.py  test_sandbox.py  test_scoring.py  test_strategies.py
