[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "rewardfuzz"
version = "0.1.0"
description = "Preventive, a-priori auditor for reward / fitness / verifier functions: attack them before you train, score how gameable they are, and get hardening suggestions."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "rewardfuzz contributors" }]
keywords = [
    "reward-hacking",
    "reward-model",
    "verifier",
    "fuzzing",
    "evolutionary-algorithms",
    "reinforcement-learning",
    "alignment",
    "rlvr",
    "goodhart",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "numpy>=1.24",
    "rich>=13.0",
]

[project.optional-dependencies]
# Optional LLM-backed spec-gaming strategy and judge ensemble. The core
# rule-based engine is fully functional without this extra.
hf = ["huggingface_hub>=0.24"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
rewardfuzz = "rewardfuzz.cli:main"

[project.urls]
Homepage = "https://github.com/hinanohart/rewardfuzz"
Repository = "https://github.com/hinanohart/rewardfuzz"
Issues = "https://github.com/hinanohart/rewardfuzz/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/rewardfuzz"]

[tool.hatch.build.targets.wheel.force-include]
"src/rewardfuzz/corpus/manifest.jsonl" = "rewardfuzz/corpus/manifest.jsonl"

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]
# Corpus targets deliberately contain "bad" / gameable code as test fixtures.
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"src/rewardfuzz/corpus/targets/*" = ["B", "E722", "F841"]
"tests/*" = ["B"]

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = false
ignore_missing_imports = true
# Corpus targets are intentionally malformed fixtures, not typed library code.
exclude = ["src/rewardfuzz/corpus/targets/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = [
    # Overflow / invalid-value warnings are expected: the corpus deliberately feeds
    # overflowing and non-finite values to exercise the numeric-exploit detector.
    "ignore:overflow encountered:RuntimeWarning",
    "ignore:invalid value encountered:RuntimeWarning",
]
